--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'D501'
 - !lcsh 'World War, 1914-1918 -- Regimental histories -- Great Britain'
 - !lcsh 'Great Britain. Army. Royal Munster Fusiliers'
+- GITenberg
 title: The Story of the Munsters at Etreux, Festubert, Rue du Bois and Hulloch
 url: http://www.gutenberg.org/ebooks/45625
